// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refractor elements OperationTraitElement given bindings field of type OperationBindingsElement should refract to semantic ApiDOM tree 1`] = `
(OperationTraitElement
  (MemberElement
    (StringElement)
    (OperationBindingsElement)))
`;

exports[`refractor elements OperationTraitElement given bindings field of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(OperationTraitElement
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement)))))
`;

exports[`refractor elements OperationTraitElement should refract to semantic ApiDOM tree 1`] = `
(OperationTraitElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ArrayElement
      (SecurityRequirementElement
        (MemberElement
          (StringElement)
          (ArrayElement)))))
  (MemberElement
    (StringElement)
    (TagsElement))
  (MemberElement
    (StringElement)
    (ExternalDocumentationElement)))
`;
